--- a/modules/CharacterModule/frames/templates/GpeMountItemTemplate.xml
+++ b/modules/CharacterModule/frames/templates/GpeMountItemTemplate.xml
@@ -1,9 +1,9 @@
 <Ui xmlns="http://www.blizzard.com/wow/ui/"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.blizzard.com/wow/ui/
 ..\..\FrameXML\UI.xsd">
-    <Script file="GpeFactionItemTemplateMixin.lua"/>
-    <Frame name="GpeFactionItemTemplate" virtual="true" frameStrata="HIGH" enableMouse="true" mixin="GpeFactionItemTemplateMixin">
-        <Size x="220" y="50"/>
+    <Script file="GpeMountItemTemplateMixin.lua"/>
+    <Frame name="GpeMountItemTemplate" virtual="true" frameStrata="HIGH" enableMouse="true" mixin="GpeMountItemTemplateMixin">
+        <Size x="220" y="35"/>
         <Anchors>
             <Anchor point="CENTER"/>
         </Anchors>
@@ -13,16 +13,15 @@
             </Layer>
             <Layer level="BORDER">
                 <Texture parentKey="icon" atlas="classicon-mage">
-                    <Size x="30" y="30"/>
+                    <Size x="20" y="20"/>
                     <Anchors>
-                        <Anchor point="LEFT" x="12"/>
+                        <Anchor point="LEFT" x="10"/>
                     </Anchors>
                 </Texture>
             </Layer>
             <Layer level="ARTWORK">
-
                 <Texture parentKey="iconBorder" atlas="UI-Achievement-IconFrame">
-                    <Size x="45" y="45"/>
+                    <Size x="30" y="30"/>
                     <Anchors>
                         <Anchor point="LEFT" x="5"/>
                     </Anchors>
@@ -43,7 +42,7 @@
                 </Texture>
                 <Texture parentKey="highlight" hidden="true" atlas="GarrMission_FollowerListButton-Select" setAllPoints="true">
                 </Texture>
-                <FontString parentKey="title1" text="海达希亚" font="Fonts/FRIZQT__.TTF" outline="THICKOUTLINE" inherits="GameFontNormal" justifyH="CENTER" justifyV="TOP">
+                <FontString parentKey="title1" text="奥妮克希亚" font="Fonts/FRIZQT__.TTF" outline="THICKOUTLINE" inherits="GameFontNormal" justifyH="CENTER" justifyV="TOP">
                     <FontHeight val="12"/>
                     <Anchors>
                         <Anchor point="TOP" y="-10"/>
@@ -51,28 +50,6 @@
                 </FontString>
             </Layer>
         </Layers>
-
-        <Frames>
-            <StatusBar parentKey="statusbar" frameStrata="HIGH" enableMouse="true">
-                <Size y="10"/>
-                <Anchors>
-                    <Anchor point="LEFT" relativeKey="$parent.iconBorder" relativePoint="RIGHT" x="3"/>
-                    <Anchor point="RIGHT" x="-15"/>
-                    <Anchor point="BOTTOM" y="8"/>
-                </Anchors>
-                <BarTexture atlas="UI-HUD-ExperienceBar-Fill-Experience"/>
-                <Layers>
-                    <Layer level="OVERLAY">
-                        <Texture parentKey="border" atlas="UI-HUD-ExperienceBar-Frame">
-                            <Anchors>
-                                <Anchor point="TOPLEFT" x="-1" y="2"/>
-                                <Anchor point="BOTTOMRIGHT" x="1" y="-5"/>
-                            </Anchors>
-                        </Texture>
-                    </Layer>
-                </Layers>
-            </StatusBar>
-        </Frames>
         <Scripts>
             <OnLoad method="OnLoad"/>
             <OnEnter method="OnEnter"/>
